WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267364
[JSC] Fix op_tail_call_varargs / op_tail_call_forward_arguments for new polymorphic DataIC
https://bugs.webkit.org/show_bug.cgi?id=267364
Summary
[JSC] Fix op_tail_call_varargs / op_tail_call_forward_arguments for new polym...
Yusuke Suzuki
Reported
2024-01-10 13:21:01 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-10 13:21:33 PST
<
rdar://problem/120803763
>
Yusuke Suzuki
Comment 2
2024-01-10 13:23:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22614
EWS
Comment 3
2024-01-10 21:31:08 PST
Committed
272886@main
(5e8bdf242068): <
https://commits.webkit.org/272886@main
> Reviewed commits have been landed. Closing PR #22614 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug